<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    >

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_note_title"
        android:textSize="@dimen/page_title_text_medium"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:textSize="@dimen/form_text_normal"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"  />

    <TextView
        android:id="@+id/tvNoteDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/error_text_normal"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        android:text="September 13th, 2020"
        tools:text="September 13th, 2020" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="336dp"
        android:layout_height="253dp"
        android:ems="10"
        android:layout_marginStart="18dp"
        android:textSize="@dimen/form_text_normal"
        android:gravity="start|top"
        android:hint="@string/content_hint"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteDate" />

    <ImageButton
        android:id="@+id/btnImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/etContent"
        app:layout_constraintStart_toStartOf="@+id/etContent"
        android:contentDescription=""
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <EditText
        android:id="@+id/etImageHeader"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginStart="19dp"
        android:hint="@string/imageHeader_hint"
        android:inputType="text"
        android:textSize="@dimen/form_text_normal"
        app:layout_constraintStart_toEndOf="@+id/btnImage"
        app:layout_constraintTop_toBottomOf="@+id/etContent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        tools:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/button_text_medium"
        app:layout_constraintTop_toBottomOf="@+id/etImageHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>