<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_note_title"
            android:textSize="@dimen/page_title_text_medium"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/etTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:textSize="@dimen/form_text_normal"
            android:inputType="text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader"  />

        <TextView
            android:id="@+id/tvNoteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/error_text_normal"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitle"
            android:text="September 13th, 2020"
            tools:text="September 13th, 2020" />

        <TextView
            android:id="@+id/etContent"
            android:layout_width="336dp"
            android:layout_height="253dp"
            android:ems="10"
            android:layout_marginStart="18dp"
            android:textSize="@dimen/form_text_normal"
            android:gravity="start|top"
            android:hint="@string/content_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNoteDate" />

        <ImageButton
            android:id="@+id/btnImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/etContent"
            app:layout_constraintStart_toStartOf="@+id/etContent"
            android:contentDescription=""
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/etImageHeader"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginStart="19dp"
            android:hint="@string/imageHeader_hint"
            android:inputType="text"
            android:textSize="@dimen/form_text_normal"
            app:layout_constraintStart_toEndOf="@+id/btnImage"
            app:layout_constraintTop_toBottomOf="@+id/etContent" />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="19dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etImageHeader"
            app:srcCompat="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:textSize="@dimen/button_text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivImage"
            tools:text="Save" />

        <TextView
            android:id="@+id/tvUri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSave"
            tools:text="URI" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>